[FIX] psr-0 in composer.json; [FIX] renamed the vendor folder

--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
             "src/services"
         ],
         "psr-0": {
-            "Vrigz\\Usermanager": "src/"
+            "Vrigzalejo\\Usermanager": "src/"
         }
     },
     "minimum-stability": "dev"
